Archive/d811934bc6d6dcb242f553fb551a5e30-508381d65616336e6537092cc0993526/output
main.cpp: In function 'int main()':
main.cpp:15:5: error: static assertion failed: non-empty struct containing tuple with empty lambda
     static_assert(std::is_empty<is_it_really>(), "non-empty struct containing tuple with empty lambda");
     ^
